# sketch-engine

./: .gitignore  CMakeLists.txt
cmake/: FindWayland.cmake
include/: sketch.h
include/base/: types.h
include/base/macros/: compiler.h
include/logging/: levels.hpp
include/platform/common/display/: display.hpp  window.hpp
include/platform/x11/display/: window.hpp
source/platform/x11/display/: window.cpp
